--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,13 @@
             <version>${serenity-version}</version>
             <scope>compile</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber7-adapter -->
+        <dependency>
+            <groupId>tech.grasshopper</groupId>
+            <artifactId>extentreports-cucumber7-adapter</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+
 
 
     </dependencies>
